--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -1,5 +1,6 @@
 name: GitHub Crawler
 
+# Trigger manually or on a schedule (every day at midnight)
 on:
   workflow_dispatch:
   schedule:
@@ -21,13 +22,16 @@ jobs:
           --health-interval=5s
           --health-timeout=5s
           --health-retries=5
+        ports:
+          - 5432:5432  # Map container port to host
 
     env:
-      DATABASE_URL: postgresql://postgres:postgres@postgres:5432/github
+      # Use localhost because this job runs directly on the runner
+      DATABASE_URL: postgresql://postgres:postgres@localhost:5432/github
       GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_ACCESS_TOKEN }}
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up Python
@@ -37,6 +41,13 @@ jobs:
 
       - name: Install dependencies
         run: pip install -r requirements.txt
+
+      - name: Wait for Postgres to be ready
+        run: |
+          echo "Waiting for Postgres..."
+          until pg_isready -h localhost -U postgres -d github; do
+            sleep 2
+          done
 
       - name: Setup DB schema
         run: python -m scripts.setup_db
