--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -28,7 +28,7 @@ jobs:
     env:
       # Use localhost because this job runs directly on the runner
       DATABASE_URL: postgresql://postgres:postgres@localhost:5432/github
-      GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_ACCESS_TOKEN }}
+      GITHUB_ACCESS_TOKEN: ${{ github.token }}
 
     steps:
       - name: Checkout repository
