--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -53,7 +53,9 @@ jobs:
         run: python -m scripts.setup_db
 
       - name: Crawl stars
-        run: python -m src.app.main
+        run: |
+          export GITHUB_API_URL="https://api.github.com/graphql"
+          python -m src.app.main
 
       - name: Export database
         run: python -m scripts.export_data stars_history
