--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -26,6 +26,7 @@ jobs:
 
     env:
       DATABASE_URL: postgresql://postgres:postgres@localhost:5432/github
+      STAR_STEP: 5
       GITHUB_ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
     steps:
